# WIP

./: ReadME.md  config.py  launch.sh  main_app.py  project_runner.py  requirements.txt
NL2LTL_PHASE2/: agentic.py  claude_api_helper.py  nusmv_wrapper.py  ocaml_interface.py  requirements.txt  setup_readme.md  streamlit_app.py  syslite_interface.py  utils.py
PROTOCOL_FORMALIZATION/: requirements.txt
REGULATORY_POLICY_CHECKER/: README.md  build.sh  dune-project  install.sh  policy_checker.opam  policy_checker.py  requirements.txt  run.sh  setup_instructions.md  streamlit_app.py
REGULATORY_POLICY_CHECKER/csv/: glba_rag.csv  hipaa_policies.csv  hipaa_policies.xlsx  hipaa_policies_all.csv  sox_rag.csv
REGULATORY_POLICY_CHECKER/data/: ccpa_types.txt  domain.txt  facts.txt  functions.txt  gdpr_types.txt  hipaa_types.txt
REGULATORY_POLICY_CHECKER/policies/: ccpa.policy  ccpa_generated.policy  coppa_generated.policy  gdpr.policy  hipaa.policy  hipaa.policy_  sox_generated.policy
REGULATORY_POLICY_CHECKER/src/: ast.ml  ast_archive.ml  data_loaders.ml  dune  environment_config.ml  environment_config_archive.ml  evaluator.ml  export_policy_files.ml  json_interface.ml  json_interface_archive.ml  lexer.mll  main.ml  main_archive.ml  parser.mly  policy_databases..ml  policy_databases.ml  policy_loader.ml  query_engine.ml  query_engine_archived.ml  test_multi_regulation.ml  type_checker.ml  type_checker_archive.ml  type_system_db.ml
REGULATORY_POLICY_CHECKER/utils/: agent_system.py  crewai_agent_system.py  crewai_policy.py  rag_csv_export.py  utils.py
(+27 files in other folders)
